# mpi-rockstar

./: .clang-format  .gitignore  Makefile  Makefile_fugaku  README.md  bitarray.h  check_syscalls.c  check_syscalls.h  client.c  client.h  config.c  config.template.h  distance.h  fof.c  fun_times.c  halo.h  integrate.h  main.c  mpi_main.cpp  mpi_main.h  nfw.c  para_qsort.hpp  parallel.cfg  parents.c  properties.c  server.c  server.h  version.h
demo_librockstar/: Makefile  config_rockstar_lightcone.txt  example.c
examples/: Makefile  bgc2_to_ascii_particles.c  calc_bgc2_shapes.c  calc_potentials.c  example.c  library_example.c  load_bgc2.c  load_bgc2.h  load_full_particles.c  load_full_particles.h  parallel.cfg  parallel_1024.cfg  parallel_1024_io.cfg  parallel_256.cfg
inet/: address.c  rsocket.c  rsocket.h  socket.c  socket.h
io/: io_bgc2.c  io_gadget.c  io_gadget.h  io_gadget4.c  io_hdf5.c  io_hdf5.h  io_internal_hdf5.c  io_internal_hdf5.h  io_util.c  io_util.h  meta_io.c  meta_io.h  read_config.c  stringparse.c
paper/: paper.bib  paper.md
pympirockstar/: README.md  __init__.py  _rockstar.pyx  build.py  demo.py  pyproject.toml  setup.py
rockstar-galaxies/: version.h
scripts/: gen_merger_cfg.pl
src/: Makefile  bounds.c  bounds.h  check_syscalls.c  check_syscalls.h  config.c  config.h  config.template.h  config_vars.c  config_vars.h  distance.c  error.cpp  error.h  fast3tree.c  find_parents.c  fof.c  fof.h  fun_times.c  fun_times.h  groupies.c  groupies.h  halo.h  hubble.c  integrate.c  interleaving.c  interleaving.h  inthash.c  inthash.h  jacobi.c  jacobi.h  (+22 more)
(+35 files in other folders)
