[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "pympirockstar"
version = "0.0.0"
description = "Python wrapper for MPI-Rockstar"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["pympirockstar"]

[tool.setuptools.dynamic]
ext-modules = {attr = "build.get_extensions"}
